# immich

./: .gitignore  Cargo.toml  Readme.md
examples/: multithread_upload.rs  takeout_upload.rs  upload_image.rs
src/: album.rs  api.rs  asset.rs  auth.rs  client.rs  host.rs  lib.rs  multipart.rs  takeout.rs  url.rs  utils.rs
src/api/: bulk_check.rs  requests.rs  upload.rs
src/takeout/: file.rs  media.rs  metadata.rs  upload.rs
