[package]
name = "immich"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Marcello <jonas.marcello@esbme.com>"]
description = "Client for Immich photo and video management"
readme = "README.md"
homepage = "https://github.com/anergictcell/immich"
repository = "https://github.com/anergictcell/immich"
license = "MIT"
keywords = ["immich", "photo", "video", "selfhosted"]
categories = ["web-programming::http-client", "multimedia::images", "multimedia::video"]

[dependencies]
thiserror = "2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.134"
ureq = {version = "2", features = ["native-certs", "cookies", "json"]}
sha1_smol = {version = "1.0.1", features = ["std"]}
time = {version = "0.3", features = ["formatting", "macros", "std", "serde"]}
crossbeam-channel = "0.5.14"
tar = "0.4"
flate2 = "1"
